--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,13 @@
+spring:
+  datasource:
+    url: jdbc:sqlserver://localhost:1433;database=cad;encrypt=true;trustServerCertificate=true;
+    username: sa
+    password: root
 
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+server:
+  port: 8084
